assets/styles.css
/* UNIVERSAL STYLES */
  /* default element styling */
  body, html {
    background-image: url("../images/hero-image.jpg");
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    background-size: 100%;
    letter-spacing: 2px;
    font-family: 'Kumbh Sans', sans-serif!important; 
  }
  h1 {
    color: #E4DED5;
    margin: 0;
    font-family: 'Kumbh Sans', sans-serif;
  }
  /* page basic styles */
  .dark-background {
    background-color: rgba(46, 46, 46, 0.9)!important;
    color: #E4DED5;
  }
  .padding-20 { 
    padding: 20px;
  }
  .padding-0 {
    padding: 0;
  }
  .center-main-content {
    margin: 20px auto;
    width: 45%;
    max-width: 750px;
  }
  .logo {
    width: 8%;
  }
  /* navbar styles */
  .uk-offcanvas-bar {
    background-color: #2E2E2E;
    color: #E4DED5;
  }
  /* button styles */
  .uk-button{
    background-color: #E4DED5!important;
    color: #2E2E2E;
  }
  .logo {
    width: 8%;
  }
/* INDEX PAGE STYLES */
  /* at risk dog carousel */
  .at-risk-li {
    width: fit-content;
    align-items: center;
    padding: 5px;
  }
  .at-risk-li > img {
  height: 125px;
  }
  /* user options for dogs */
  .breed-select {
    background-color:  #E4DED5;
  }
  .uk-checkbox:checked, ::selection {
    background-color: #B6ADA2!important;
  }

/* SEARCH PAGE STYLES */
  .dog-profile-card {
    margin-bottom: 20px;
  }
  .dog-profile-image {
    width: 33%;
  }
  .search-images {
    height: 100%;
    float: left;
    object-fit: cover;
    overflow: hidden;
  }
  h3, h4 {
    color: #E4DED5!important;
    width: 75%;
    margin: 0;
    padding-bottom: 5px;
  }

